--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ adal==1.2.7
 aiohttp==3.8.1
 aiosignal==1.2.0
 alembic==1.8.1
+altair==4.2.0
 analytics-python==1.4.0
 anyio @ file:///opt/concourse/worker/volumes/live/485b0f52-1188-482a-6285-65a36c8fa8a6/volume/anyio_1644481714856/work/dist
 applicationinsights==0.11.10
@@ -46,6 +47,7 @@ backports.weakref==1.0.post1
 bcrypt==4.0.0
 beautifulsoup4 @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_croot-cdiouih5/beautifulsoup4_1650462164803/work
 bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+blinker==1.5
 blis==0.7.8
 brotlipy==0.7.0
 cachetools==5.2.0
@@ -56,6 +58,7 @@ cffi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/croot-2p6
 charset-normalizer==2.1.0
 click==8.1.3
 cloudpickle==2.1.0
+commonmark==0.9.1
 contextlib2==21.6.0
 cryptography @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_b470f7cb-c8f1-42c9-b84f-23789ea77e7c9difcqh4/croots/recipe/cryptography_1652101134392/work
 cycler==0.11.0
@@ -75,6 +78,7 @@ dotnetcore2==3.1.23
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
 entrypoints @ file:///opt/concourse/worker/volumes/live/78b2c4ae-da17-4aa7-7fdc-138f840abf07/volume/entrypoints_1649926486598/work
 et-xmlfile==1.1.0
+exceptiongroup==1.1.0
 executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
 fastapi==0.85.0
 fastjsonschema @ file:///tmp/build/80754af9/python-fastjsonschema_1620414857593/work/dist
@@ -181,6 +185,7 @@ oauth2client==4.1.3
 oauthlib==3.2.0
 openpyxl==3.0.10
 orjson==3.8.0
+outcome==1.2.0
 packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
 pamela==1.0.0
 pandas==1.4.3
@@ -213,10 +218,12 @@ pyasn1-modules==0.2.8
 pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
 pycryptodome==3.15.0
 pydantic==1.9.2
+pydeck==0.8.0
 pydub==0.25.1
 Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
 PyJWT==2.4.0
 pyLDAvis==3.3.1
+Pympler==1.0.1
 PyNaCl==1.5.0
 pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
 pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
@@ -229,6 +236,7 @@ python-json-logger==2.0.4
 python-multipart==0.0.5
 pytorch-lightning==1.8.3.post0
 pytz @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_1caf090c-01b6-4973-adac-d2eb884a674e7zonb9eb/croots/recipe/pytz_1654762641285/work
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 pyzmq @ file:///opt/concourse/worker/volumes/live/dbbc086d-2905-496b-54ee-08109e9ced8d/volume/pyzmq_1638435006316/work
 querystring-parser==1.2.4
@@ -237,6 +245,7 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 responses==0.18.0
 rfc3986==1.5.0
+rich==13.0.0
 rsa==4.8
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
@@ -245,6 +254,8 @@ scikit-learn==1.1.1
 scipy==1.8.1
 seaborn==0.11.2
 SecretStorage==3.3.3
+selenium==4.7.2
+semver==2.13.0
 Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
 sentry-sdk==1.9.8
 setproctitle==1.3.2
@@ -265,6 +276,7 @@ stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
 StandardScaler==0.5
 starlette==0.20.4
 statsmodels==0.13.2
+streamlit==1.16.0
 sympy==1.11.1
 tabulate==0.8.10
 tblib==1.7.0
@@ -276,6 +288,7 @@ thinc==8.1.0
 threadpoolctl==3.1.0
 tinycss2==1.1.1
 tokenizers==0.12.1
+toml==0.10.2
 toolz==0.12.0
 torch==1.14.0.dev20221203
 torchaudio==0.14.0.dev20221203
@@ -285,11 +298,16 @@ tornado @ file:///opt/concourse/worker/volumes/live/2c1a63a2-006b-48ee-56b9-0cfe
 tqdm==4.64.0
 traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
 transformers==4.22.1
+trio==0.22.0
+trio-websocket==0.9.2
 typer==0.4.2
 typing_extensions @ file:///opt/conda/conda-bld/typing_extensions_1647553014482/work
+tzdata==2022.7
+tzlocal==4.2
 uc-micro-py==1.0.1
 urllib3==1.26.12
 uvicorn==0.18.3
+validators==0.20.0
 wandb==0.13.3
 wasabi==0.10.1
 wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
@@ -299,6 +317,7 @@ websockets==10.3
 Werkzeug==2.2.2
 widgetsnbextension==3.6.1
 wordcloud==1.8.2.2
+wsproto==1.2.0
 xlwt==1.3.0
 xxhash==3.0.0
 yarl==1.8.1
